Finally fixed the problems with the keyup and mousedown conflict by adding a hide function on the mousedown event and some css to hide any overflow in the container div.

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,8 @@ body {
     height: 500px;
     position: relative;
     z-index: 1;
+    /* Use this to hide issue with the mouse/keyup event */
+    overflow: hidden;
 }
 
 .ryu {
